crates/anvil-tui/src/surfaces/tutorial/snapshots/anvil_tui__surfaces__tutorial__render__tests__snapshot_command_step_mid_reveal.snap
---
source: crates/anvil-tui/src/surfaces/tutorial/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]T[fg:#EBEBEB]u[fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB]                                                            
                                                                                
  a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold]'[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#D95A00,bold]p[fg:#D95A00,bold]r[fg:#D95A00,bold]o[fg:#D95A00,bold]t[fg:#D95A00,bold]e[fg:#D95A00,bold]c[fg:#D95A00,bold]t[fg:#D95A00,bold]i[fg:#D95A00,bold]o[fg:#D95A00,bold]n[fg:#D95A00,bold] [fg:#D95A00,bold]l[fg:#D95A00,bold]o[fg:#D95A00,bold]o[fg:#D95A00,bold]p[fg:#D95A00,bold] [fg:#85858A] [fg:#85858A]·[fg:#85858A] [fg:#85858A] [fg:#85858A]S[fg:#EBEBEB]t[fg:#EBEBEB]e[fg:#EBEBEB]p[fg:#EBEBEB] [fg:#EBEBEB]1[fg:#EBEBEB] [fg:#EBEBEB]o[fg:#EBEBEB]f[fg:#EBEBEB] [fg:#EBEBEB]1[fg:#EBEBEB]                                       
  ◉[fg:#D95A00,bold]                                                                             
                                                                                
  ┌[fg:#D95A00] [fg:#D95A00]R[fg:#D95A00]u[fg:#D95A00]n[fg:#D95A00] [fg:#D95A00]t[fg:#D95A00]h[fg:#D95A00]e[fg:#D95A00] [fg:#D95A00]v[fg:#D95A00]e[fg:#D95A00]r[fg:#D95A00]i[fg:#D95A00]f[fg:#D95A00]i[fg:#D95A00]e[fg:#D95A00]r[fg:#D95A00] [fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┐[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00] A[fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB]h[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB]t[fg:#EBEBEB]e[fg:#EBEBEB]p[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]h[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]r[fg:#EBEBEB]u[fg:#EBEBEB]n[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB] [fg:#EBEBEB]r[fg:#EBEBEB]e[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]o[fg:#EBEBEB]m[fg:#EBEBEB]m[fg:#EBEBEB]a[fg:#EBEBEB]n[fg:#EBEBEB]d[fg:#EBEBEB].[fg:#EBEBEB]                                   │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00] R[fg:#D95A00,bold]u[fg:#D95A00,bold]n[fg:#D95A00,bold]:[fg:#D95A00,bold] [fg:#D95A00,bold]a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#D95A00,bold]s[fg:#D95A00,bold]t[fg:#D95A00,bold]a[fg:#D95A00,bold]r[fg:#D95A00,bold]t[fg:#D95A00,bold] [fg:#D95A00,bold]-[fg:#D95A00,bold]-[fg:#D95A00,bold]v[fg:#D95A00,bold]e[fg:#D95A00,bold]r[fg:#D95A00,bold]i[fg:#D95A00,bold]f[fg:#D95A00,bold]y[fg:#D95A00,bold]                                                │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00] $[fg:#D95A00,bold] [fg:#D95A00,bold]a[fg:#EBEBEB,bold]n[fg:#EBEBEB,bold]v[fg:#EBEBEB,bold]i[fg:#EBEBEB,bold]l[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]▌[fg:#D95A00,bold]                                                                │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  │[fg:#D95A00]                                                                          │[fg:#D95A00]  
  └[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]  
a[fg:#85858A]n[fg:#85858A]y[fg:#85858A] [fg:#85858A]k[fg:#85858A]e[fg:#85858A]y[fg:#85858A] [fg:#85858A]r[fg:#85858A]u[fg:#85858A]n[fg:#85858A] [fg:#85858A]n[fg:#85858A]o[fg:#85858A]w[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]s[fg:#85858A]c[fg:#85858A] [fg:#85858A]c[fg:#85858A]a[fg:#85858A]n[fg:#85858A]c[fg:#85858A]e[fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A]                        [[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]Z[fg:#85858A]
